# Crimson-Lock

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  deploy_windows.bat  run.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
include/core/: CryptoManager.h  PasswordGenerator.h  SecureMemory.h  SecureVault.h  VaultEntry.h
include/ui/: MainWindow.h  VaultCreationDialog.h  VaultViewDialog.h
src/: main.cpp
src/core/: CryptoManager.cpp  PasswordGenerator.cpp  SecureMemory.cpp  SecureVault.cpp  VaultEntry.cpp
src/ui/: MainWindow.cpp  VaultCreationDialog.cpp  VaultViewDialog.cpp
